   directory.
 * #1078: For the "compact" action, pass "--dry-run" through to Borg.
 * #1085: Fix a regression in which the default monitoring verbosity is 0 (warnings only) instead of
   1 (info about steps borgmatic is taking). This prevented logs from showing up in monitoring
   services like Healthchecks unless you had an explicit monitoring verbosity set.

2.0.4
 * #1072: Fix path rewriting for non-root patterns in the ZFS, Btrfs, and LVM hooks.
 * #1073: Clarify the documentation about when an "after: error" command hook runs and how it
   differs from other hooks:
   https://torsion.org/borgmatic/docs/how-to/add-preparation-and-cleanup-steps-to-backups/
 * #1075: Fix an incorrect warning about Borg placeholders being unsupported in a command hook.
 * #1080: If the exact same "everything" command hook is present in multiple configuration files,
   only run it once.

2.0.3
 * #1065: Fix a regression in monitoring hooks in which an error pinged the finish state instead of
   the fail state.
 * #1066: Add a "states" option to command hooks, so you can optionally skip an "after" hook if
   borgmatic encounters an error.
 * #1071: Fix an error in the LVM hook when removing a snapshot directory.

2.0.2
 * #1035: Document potential performance issues and workarounds with the ZFS, Btrfs, and LVM hooks:
   https://torsion.org/borgmatic/docs/how-to/snapshot-your-filesystems/
 * #1053: Display a nicer error message when the "recreate" action encounters an archive that
   already exists.
 * #1059: Fix a regression in which soft failure exit codes in command hooks were not respected.
 * #1060: Fix action command hooks getting run too many times when multiple borgmatic actions are
   executed (implicitly or explicitly).
 * #1060: Don't run action command hooks for actions listed in the "skip_actions" option.
 * #1062: Fix a regression that broke environment variable interpolation.
 * #1063: List the configured "when" action names in the log entries for command hooks.
